isBlank() not compatible with Java8